将原有loading改为带padding的insetLoading

--- a/app/src/main/res/drawable/gif_loading.xml
+++ b/app/src/main/res/drawable/gif_loading.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <animated-rotate android:drawable="@drawable/loading" android:pivotX="50%" android:pivotY="50%" />
-    </item>
-</selector>
+<inset xmlns:android="http://schemas.android.com/apk/res/android"
+    android:insetBottom="10dp"
+    android:insetLeft="10dp"
+    android:insetRight="10dp"
+    android:insetTop="10dp">
+    <!--带padding的loading-->
+    <animated-rotate
+        android:drawable="@drawable/loading"
+        android:pivotX="50%"
+        android:pivotY="50%" />
+</inset>
